<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="8dp"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/textViewOperation"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="start"
        android:textColor="@color/black"
        android:textSize="54sp"
        android:layout_marginBottom="4dp"
        android:background="@color/white"/>
    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:textSize="54sp"
        android:textColor="@color/purple"
        android:layout_marginBottom="8dp"
        android:background="@color/white"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/delete"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/delete"
            android:padding="16dp"
            android:textAppearance="?android:textAppearanceLarge"
            android:textStyle="bold"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/numbers_buttons_selector"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:onClick="onRemove"
            tools:ignore="ButtonStyle" />
        <Button
            android:id="@+id/clear"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/clear"
            android:padding="16dp"
            android:textAppearance="?android:textAppearanceLarge"
            android:textStyle="bold"
            android:layout_marginBottom="4dp"
            android:background="@drawable/numbers_buttons_selector"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:onClick="onRemove"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/seven"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/seven"
            android:padding="16dp"
            android:textStyle="bold"
            android:textAppearance="?android:textAppearanceLarge"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/numbers_buttons_selector"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:onClick="onNumber"
            tools:ignore="ButtonStyle" />
        <Button
            android:id="@+id/eight"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/eight"
            android:padding="16dp"
            android:textAppearance="?android:textAppearanceLarge"
            android:textStyle="bold"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/numbers_buttons_selector"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:onClick="onNumber"
            tools:ignore="ButtonStyle"/>
        <Button
            android:id="@+id/nine"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/nine"
            android:padding="16dp"
            android:textAppearance="?android:textAppearanceLarge"
            android:textStyle="bold"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/numbers_buttons_selector"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            tools:ignore="ButtonStyle"
            android:onClick="onNumber"/>
        <Button
            android:id="@+id/div"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/div"
            android:padding="16dp"
            android:textStyle="bold"
            android:textAppearance="?android:textAppearanceLarge"
            android:layout_marginBottom="4dp"
            android:background="@drawable/operations_buttons_selector"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            tools:ignore="ButtonStyle"
            android:onClick="onOperate"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/four"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/four"
            android:textStyle="bold"
            android:padding="16dp"
            android:textAppearance="?android:textAppearanceLarge"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/numbers_buttons_selector"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            tools:ignore="ButtonStyle"
            android:onClick="onNumber"/>
        <Button
            android:id="@+id/five"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/five"
            android:textAppearance="?android:textAppearanceLarge"
            android:textStyle="bold"
            android:padding="16dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/numbers_buttons_selector"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            tools:ignore="ButtonStyle"
            android:onClick="onNumber"/>
        <Button
            android:id="@+id/six"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/six"
            android:textAppearance="?android:textAppearanceLarge"
            android:textStyle="bold"
            android:padding="16dp"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/numbers_buttons_selector"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            tools:ignore="ButtonStyle"
            android:onClick="onNumber"/>
        <Button
            android:id="@+id/mul"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/mul"
            android:textAppearance="?android:textAppearanceLarge"
            android:textStyle="bold"
            android:padding="16dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/operations_buttons_selector"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            tools:ignore="ButtonStyle"
            android:onClick="onOperate"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/one"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/one"
            android:textStyle="bold"
            android:textAppearance="?android:textAppearanceLarge"
            android:layout_marginEnd="4dp"
            android:padding="16dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/numbers_buttons_selector"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            tools:ignore="ButtonStyle"
            android:onClick="onNumber"/>
        <Button
            android:id="@+id/two"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/two"
            android:textAppearance="?android:textAppearanceLarge"
            android:textStyle="bold"
            android:layout_marginEnd="4dp"
            android:padding="16dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/numbers_buttons_selector"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            tools:ignore="ButtonStyle"
            android:onClick="onNumber"/>
        <Button
            android:id="@+id/three"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/three"
            android:textAppearance="?android:textAppearanceLarge"
            android:textStyle="bold"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="4dp"
            android:padding="16dp"
            android:background="@drawable/numbers_buttons_selector"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            tools:ignore="ButtonStyle"
            android:onClick="onNumber"/>
        <Button
            android:id="@+id/sub"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/sub"
            android:textAppearance="?android:textAppearanceLarge"
            android:textStyle="bold"
            android:layout_marginBottom="4dp"
            android:padding="16dp"
            android:background="@drawable/operations_buttons_selector"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            tools:ignore="ButtonStyle"
            android:onClick="onOperate"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/dot"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/dot"
            android:textAppearance="?android:textAppearanceLarge"
            android:textStyle="bold"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:padding="16dp"
            android:background="@drawable/numbers_buttons_selector"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            tools:ignore="ButtonStyle"
            android:onClick="onNumber"/>
        <Button
            android:id="@+id/zero"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/zero"
            android:textStyle="bold"
            android:textAppearance="?android:textAppearanceLarge"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:padding="16dp"
            android:background="@drawable/numbers_buttons_selector"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            tools:ignore="ButtonStyle"
            android:onClick="onNumber"/>
        <Button
            android:id="@+id/equals"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/equals"
            android:textAppearance="?android:textAppearanceLarge"
            android:textStyle="bold"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="4dp"
            android:padding="16dp"
            android:background="@drawable/numbers_buttons_selector"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            tools:ignore="ButtonStyle"
            android:onClick="onEquals"/>
        <Button
            android:id="@+id/sum"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/sum"
            android:textStyle="bold"
            android:textAppearance="?android:textAppearanceLarge"
            android:layout_marginBottom="4dp"
            android:padding="16dp"
            android:background="@drawable/operations_buttons_selector"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            tools:ignore="ButtonStyle"
            android:onClick="onOperate"/>

    </LinearLayout>

</LinearLayout>